simplespringboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplespringboot
  labels:
    app: simplespringboot
spec:
  selector:
    matchLabels:
      app: simplespringboot
  replicas: 1
  template:
    metadata:
      labels:
        app: simplespringboot
    spec:
      containers:
        - name: simplespringboot
          image: simplespringboot:2.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: simplespringboot-service
spec:
  type: LoadBalancer
  selector:
    app: simplespringboot
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
