simplespringboot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplespringboot-ingress
spec:
  rules:
    - host: simplespringbootdemo.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: simplespringboot-service
                port:
                  number: 8080
